@@ -3,6 +3,8 @@ dist
 .DS_Store
 __pycache__
 autom4te.cache
+htmlcov
+.coverage
 
 syntax: glob
 *.so
