@@ -1,6 +1,6 @@
 # This file is generated by objective.metadata
 #
-# Last update: Tue Oct  2 21:31:30 2012
+# Last update: Wed Nov 14 10:54:38 2012
 
 import objc, sys
 
@@ -524,7 +524,7 @@ try:
     r(b'NSObject', b'classForKeyedArchiver', {'retval': {'type': '#'}})
     r(b'NSObject', b'classForKeyedUnarchiver', {'retval': {'type': '#'}})
     r(b'NSObject', b'classForPortCoder', {'retval': {'type': '#'}})
-    r(b'NSObject', b'commitEditingAndReturnError:', {'arguments': {2: {'typestr': 'o^@'}}})
+    r(b'NSObject', b'commitEditingAndReturnError:', {'arguments': {2: {'type': 'o'}}})
     r(b'NSObject', b'conformsToProtocol:', {'retval': {'type': 'Z'}})
     r(b'NSObject', b'conformsToProtocol:', {'retval': {'type': 'Z'}})
     r(b'NSObject', b'connection:canAuthenticateAgainstProtectionSpace:', {'retval': {'type': b'Z'}})
@@ -540,8 +540,9 @@ try:
     r(b'NSObject', b'connectionDidFinishLoading:', {'retval': {'type': 'v'}})
     r(b'NSObject', b'connectionShouldUseCredentialStorage:', {'retval': {'type': b'Z'}})
     r(b'NSObject', b'continueWithoutCredentialForAuthenticationChallenge:', {'retval': {'type': 'v'}})
-    r(b'NSObject', b'copyWithZone:', {'arguments': {2: {'type': '^{_NSZone=}'}}})
-    r(b'NSObject', b'copyWithZone:', {'arguments': {2: {'type': '^{_NSZone=}'}}})
+    r(b'NSObject', b'copy', {'retval': {'already_retained': True}})
+    r(b'NSObject', b'copyWithZone:', {'retval': {'already_retained': True}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
+    r(b'NSObject', b'copyWithZone:', {'retval': {'already_retained': True}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
     r(b'NSObject', b'countByEnumeratingWithState:objects:count:', {'arguments': {2: {'type': sel32or64(b'^{?=L^@^L[5L]}', b'^{?=Q^@^Q[5Q]}')}, 3: {'type': '^@'}}, 'suggestion': 'use python iteration'})
     r(b'NSObject', b'didChange:valuesAtIndexes:forKey:', {'retval': {'type': 'v'}, 'arguments': {2: {'type': 'I'}}})
     r(b'NSObject', b'didChangeValueForKey:', {'retval': {'type': 'v'}})
@@ -612,8 +613,9 @@ try:
     r(b'NSObject', b'makeNewConnection:sender:', {'retval': {'type': 'Z'}})
     r(b'NSObject', b'methodForSelector:', {'retval': {'type': '^?'}, 'arguments': {2: {'type': ':'}}})
     r(b'NSObject', b'methodSignatureForSelector:', {'arguments': {2: {'type': ':'}}})
-    r(b'NSObject', b'mutableCopyWithZone:', {'retval': {'type': '@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
-    r(b'NSObject', b'mutableCopyWithZone:', {'retval': {'type': '@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
+    r(b'NSObject', b'mutableCopy', {'retval': {'already_retained': True, 'type': '@'}})
+    r(b'NSObject', b'mutableCopyWithZone:', {'retval': {'already_retained': True, 'type': '@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
+    r(b'NSObject', b'mutableCopyWithZone:', {'retval': {'already_retained': True, 'type': '@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
     r(b'NSObject', b'netService:didNotPublish:', {'retval': {'type': 'v'}})
     r(b'NSObject', b'netService:didNotResolve:', {'retval': {'type': 'v'}})
     r(b'NSObject', b'netService:didUpdateTXTRecordData:', {'retval': {'type': 'v'}})
@@ -1193,7 +1195,7 @@ try:
     r(b'NSObject', b'connectionDidResumeDownloading:totalBytesWritten:expectedTotalBytes:', {'required': False, 'retval': {'type': b'v'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'q'}, 4: {'type': b'q'}}})
     r(b'NSObject', b'connectionShouldUseCredentialStorage:', {'required': False, 'retval': {'type': b'Z'}, 'arguments': {2: {'type': b'@'}}})
     r(b'NSObject', b'continueWithoutCredentialForAuthenticationChallenge:', {'required': True, 'retval': {'type': 'v'}, 'arguments': {2: {'type': b'@'}}})
-    r(b'NSObject', b'copyWithZone:', {'required': True, 'retval': {'type': b'@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
+    r(b'NSObject', b'copyWithZone:', {'required': True, 'retval': {'already_retained': True, 'type': b'@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
     r(b'NSObject', b'countByEnumeratingWithState:objects:count:', {'required': True, 'retval': {'type': sel32or64(b'I', b'Q')}, 'arguments': {2: {'type': sel32or64(b'^{?=L^@^L[5L]}', b'^{?=Q^@^Q[5Q]}')}, 3: {'type': '^@'}, 4: {'type': sel32or64(b'I', b'Q')}}, 'suggestion': 'use python iteration'})
     r(b'NSObject', b'createConversationForConnection:', {'required': False, 'retval': {'type': b'@'}, 'arguments': {2: {'type': b'@'}}})
     r(b'NSObject', b'debugDescription', {'required': False, 'retval': {'type': b'@'}})
@@ -1246,7 +1248,7 @@ try:
     r(b'NSObject', b'makeNewConnection:sender:', {'required': False, 'retval': {'type': 'Z'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'@'}}})
     r(b'NSObject', b'metadataQuery:replacementObjectForResultObject:', {'required': False, 'retval': {'type': b'@'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'@'}}})
     r(b'NSObject', b'metadataQuery:replacementValueForAttribute:value:', {'required': False, 'retval': {'type': b'@'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'@'}, 4: {'type': b'@'}}})
-    r(b'NSObject', b'mutableCopyWithZone:', {'required': True, 'retval': {'type': '@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
+    r(b'NSObject', b'mutableCopyWithZone:', {'required': True, 'retval': {'already_retained': True, 'type': '@'}, 'arguments': {2: {'type': '^{_NSZone=}'}}})
     r(b'NSObject', b'netService:didNotPublish:', {'required': False, 'retval': {'type': 'v'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'@'}}})
     r(b'NSObject', b'netService:didNotResolve:', {'required': False, 'retval': {'type': 'v'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'@'}}})
     r(b'NSObject', b'netService:didUpdateTXTRecordData:', {'required': False, 'retval': {'type': 'v'}, 'arguments': {2: {'type': b'@'}, 3: {'type': b'@'}}})
